--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/ChatPage.xaml
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/ChatPage.xaml
@@ -1,14 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:effects="clr-namespace:ChatApp_PasanaSubaan.Effects"
+             NavigationPage.HasNavigationBar="False"
              x:Class="ChatApp_PasanaSubaan.ChatPage"
              Title="Chat"
              IconImageSource="ChatIcon.png">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="You are in the chat page"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Padding="10">
+            <Frame
+                Padding="0"
+                CornerRadius="10"
+                BorderColor="Black"
+                
+                IsClippedToBounds="True">
+                <SearchBar Placeholder="Search user email"
+                   CancelButtonColor="Black"
+                   PlaceholderColor="Gray"
+                   TextColor="Black"
+                   TextTransform="Lowercase"
+                   FontSize="Medium"/>
+
+            </Frame>
+
+            <Frame
+                Padding="10"
+                CornerRadius="10"
+                BorderColor="Black"
+                IsClippedToBounds="True">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="NameClicked"/>
+                </Frame.GestureRecognizers>
+                <Grid Padding="1">
+                    <Label
+                        Grid.Row="0"
+                VerticalOptions="Start"
+                FontSize="Medium"
+                FontAttributes="Bold"
+                Text="Your Name"
+                TextColor="DimGray"/>
+                    <Label
+                        Grid.Row="1"
+                VerticalOptions="Start"
+                FontSize="Small"
+                FontAttributes="Bold"
+                Text="your_email@google.com"
+                TextColor="DimGray"/>
+                </Grid>
+                
+            </Frame>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
