--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/RegisterPage.xaml
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/RegisterPage.xaml
@@ -1,12 +1,87 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ChatApp-PasanaSubaan.RegisterPage">
+             x:Class="ChatApp_PasanaSubaan.RegisterPage"
+             xmlns:local="clr-namespace:ChatApp_PasanaSubaan">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Padding="10" VerticalOptions="Start" HorizontalOptions="FillAndExpand">
+
+            <Image Source="Logo.png" BackgroundColor="DeepPink"></Image>
+
+            <Frame x:Name="userbox"
+                   BorderColor="black"
+                   Margin="5,20,5,0"
+                   Padding="10,5"
+                   CornerRadius="50">
+                <local:CustomEntry x:Name="username" Placeholder="Username" TextColor="black" PlaceholderColor="gray" Focused="username_Focused"/>
+            </Frame>
+            <Frame x:Name="emailbox"
+                   BorderColor="black"
+                   Margin="5"
+                   Padding="10,5"
+                   CornerRadius="50">
+                <local:CustomEntry x:Name="email" Placeholder="Email" Keyboard="Email" TextColor="black" PlaceholderColor="gray" Focused="email_Focused"/>
+            </Frame>
+            <Frame x:Name="passbox"
+                   BorderColor="black"
+                   Margin="5"
+                   Padding="10,5"
+                   CornerRadius="50">
+                <RelativeLayout Padding="0">
+                    <local:CustomEntry x:Name="pass" Placeholder="Password" IsPassword="true" TextColor="black" PlaceholderColor="gray" RelativeLayout.WidthConstraint="270" Focused="pass_Focused"/>
+                    <Button x:Name="hide" Text="Hide" TextColor="white" BackgroundColor="DeepPink" CornerRadius="50" RelativeLayout.XConstraint="270" RelativeLayout.HeightConstraint="45" Margin="5" Clicked="HidePass"/>
+                    <Button x:Name="show" Text="Show" TextColor="white" BackgroundColor="DeepPink" CornerRadius="50" RelativeLayout.XConstraint="270" RelativeLayout.HeightConstraint="45" Margin="5" Clicked="ShowPass"/>
+                </RelativeLayout>
+            </Frame>
+            <Frame x:Name="cpassbox"
+                   BorderColor="black"
+                   Margin="5"
+                   Padding="10,5"
+                   CornerRadius="50">
+                <RelativeLayout Padding="0">
+                    <local:CustomEntry x:Name="cpass" Placeholder="Password" IsPassword="true" TextColor="black" PlaceholderColor="gray" RelativeLayout.WidthConstraint="270" Focused="cpass_Focused"/>
+                    <Button x:Name="chide" Text="Hide" TextColor="white" BackgroundColor="DeepPink" CornerRadius="50" RelativeLayout.XConstraint="270" RelativeLayout.HeightConstraint="45" Margin="5" Clicked="HideCPass"/>
+                    <Button x:Name="cshow" Text="Show" TextColor="white" BackgroundColor="DeepPink" CornerRadius="50" RelativeLayout.XConstraint="270" RelativeLayout.HeightConstraint="45" Margin="5" Clicked="ShowCPass"/>
+                </RelativeLayout>
+            </Frame>
+
+            <Button
+                VerticalOptions="Center"
+                Text="Sign up"
+                TextColor="white"
+                BackgroundColor="DeepPink"
+                CornerRadius="5"
+                Clicked="Register"
+             />
+            <Button
+                VerticalOptions="Center"
+                Text="Sign in to your account"
+                TextColor="white"
+                BackgroundColor="HotPink"
+                CornerRadius="5"
+                Clicked="SignIn"
+             />
+
+            <RelativeLayout Padding="5">
+                <Button
+                VerticalOptions="Center"
+                Text="Sign in with Google"
+                TextColor="Black"
+                BackgroundColor="Transparent"
+                BorderColor="Gray"
+                BorderWidth="1"
+                CornerRadius="5"
+                RelativeLayout.WidthConstraint="190"
+                />
+                <Button
+                VerticalOptions="Center"
+                Text="Sign in with Facebook"
+                TextColor="white"
+                BackgroundColor="Blue"
+                CornerRadius="5"
+                RelativeLayout.XConstraint="200"
+                />
+            </RelativeLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
